--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,8 @@
             android:layout_alignParentRight="true"/>
 
 
+
+
        <Button
            android:id="@+id/blue"
            android:layout_width="match_parent"
@@ -49,6 +51,16 @@
         android:layout_below="@id/image"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"/>
+
+
+    <ImageView
+        android:id="@+id/pic"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_above="@id/blue"
+        android:layout_centerHorizontal="true"/>
+
+
 
 
 
